samples/_failures_safe/1761077409_08efe1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3c6a276.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a3c6a276.c:169:24: error: expected ‘;’ at end of input
  169 |             success = 1
      |                        ^
      |                        ;
./samples/SAFE/__tmp_a3c6a276.c:169:13: error: expected declaration or statement at end of input
  169 |             success = 1
      |             ^~~~~~~
./samples/SAFE/__tmp_a3c6a276.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a3c6a276.c:169:13: error: expected declaration or statement at end of input
